--- a/ch3_GWAS_Continuous_Trait_Case_Study.html
+++ b/ch3_GWAS_Continuous_Trait_Case_Study.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>3_GWAS_Continuous_Trait_Case_Study</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>ch3_GWAS_Continuous_Trait_Case_Study</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14579,7 +14579,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="GWAS-Case-Study-with-Continuous-Trait-">GWAS Case Study with Continuous Trait <a class="tocSkip" /><a class="anchor-link" href="#GWAS-Case-Study-with-Continuous-Trait-">&#182;</a></h1>
+<h1 id="Chapter-3.-GWAS-Case-Study-with-Continuous-Trait-">Chapter 3. GWAS Case Study with Continuous Trait <a class="tocSkip" /><a class="anchor-link" href="#Chapter-3.-GWAS-Case-Study-with-Continuous-Trait-">&#182;</a></h1>
 </div>
 </div>
 </div>
